--- a/documentation/thesis/thesis_acronyms.tex
+++ b/documentation/thesis/thesis_acronyms.tex
@@ -25,6 +25,7 @@
 \newacronym{json}{JSON}{JavaScript Object Notation}
 \newacronym{id}{ID}{Identification Number}
 \newacronym{pcb}{PCB}{Printed Circuit Board}
+\newacronym{os}{OS}{Operating System}
 
 
 
