--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -1,4 +1,32 @@
 
+@article{cmr.a.20165,
+author = {Soltner, H. and Blümler, P.},
+title = {Dipolar Halbach magnet stacks made from identically shaped permanent magnets for magnetic resonance},
+journal = {Concepts in Magnetic Resonance Part A},
+volume = {36A},
+number = {4},
+pages = {211-222},
+keywords = {homogeneity, NMR, MRI, EPR, ESR, Mandhala, magic ring, portable, mobile, permanent magnet},
+doi = {https://doi.org/10.1002/cmr.a.20165},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/cmr.a.20165},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/cmr.a.20165},
+abstract = {Abstract NMR Mandhalas (Magnetic Arrangement for Novel Discrete Halbach LAyout) are arrays of identically shaped magnets in a Halbach-type arrangement. They provide a simple and cost-effective way to generate high magnetic fields for mobile applications, for example, in magnetic resonance. Based on the introductory publication by Raich and Blümler (Concepts Magn Reson 2004;23B:16–25), we extend the notion of Mandhalas from cube-shaped magnets to polygonal and cylindrical ones and present construction guidelines for the stacking of such rings to generate homogeneous magnetic fields over larger volumes. For this purpose, we present formulas and numerical values based on a dipole approach to calculate the flux density of single rings and composed 3D systems and compare to corresponding results obtained by 3D boundary element method calculations. As an application of the approach presented here, we constructed prototypes. © 2010 Wiley Periodicals, Inc. Concepts Magn Reson Part A 36A: 211–222, 2010.},
+year = {2010}
+}
+
+
+@article{Wickenbrock_2021,
+title={High homogeneity permanent magnet for diamond magnetometry},
+volume={322},
+ISSN={1090-7807},
+url={http://dx.doi.org/10.1016/j.jmr.2020.106867},
+DOI={10.1016/j.jmr.2020.106867},
+journal={Journal of Magnetic Resonance},
+publisher={Elsevier BV},
+author={Wickenbrock, Arne and Zheng, Huijie and Chatzidrosos, Georgios and Shaji Rebeirro, Joseph and Schneemann, Tim and Blümler, Peter},
+year={2021},
+month=jan, pages={106867}
+}
 
 @article{HallbachMagnetDesignPaper,
 author = {Peter Bluemler, Helmut Soltner},
@@ -119,6 +147,28 @@ url = {https://openscad.org},
 }
 
 
+@Article{         harris2020array,
+title         = {Array programming with {NumPy}},
+author        = {Charles R. Harris and K. Jarrod Millman and St{\'{e}}fan J.
+                van der Walt and Ralf Gommers and Pauli Virtanen and David
+                Cournapeau and Eric Wieser and Julian Taylor and Sebastian
+                Berg and Nathaniel J. Smith and Robert Kern and Matti Picus
+                and Stephan Hoyer and Marten H. van Kerkwijk and Matthew
+                Brett and Allan Haldane and Jaime Fern{\'{a}}ndez del
+                R{\'{i}}o and Mark Wiebe and Pearu Peterson and Pierre
+                G{\'{e}}rard-Marchant and Kevin Sheppard and Tyler Reddy and
+                Warren Weckesser and Hameer Abbasi and Christoph Gohlke and
+                Travis E. Oliphant},
+year          = {2020},
+month         = sep,
+journal       = {Nature},
+volume        = {585},
+number        = {7825},
+pages         = {357--362},
+doi           = {10.1038/s41586-020-2649-2},
+publisher     = {Springer Science and Business Media {LLC}},
+url           = {https://doi.org/10.1038/s41586-020-2649-2}
+}
 
 
 
