--- a/documentation/thesis/thesis_document.tex
+++ b/documentation/thesis/thesis_document.tex
@@ -892,66 +892,70 @@ categories:
 An overview of these is given in the subchapters as the following. There
 are also introductory examples which provide an overview of the basic
 functions in the \passthrough{\lstinline!Examples!}\ref{examples}
-section, as well as further examples in the online documentation.
-\cite{MagneticReadoutProcessingReadTheDocs}
+section, as well as further examples in the online
+documentation\cite{MagneticReadoutProcessingReadTheDocs}.
 
 \hypertarget{core-modules}{%
 \subsection{Core Modules}\label{core-modules}}
 
-\hypertarget{extension-modules}{%
-\subsection{Extension Modules}\label{extension-modules}}
+The included core modules are essential for using the library. Basic
+data types are implemented, as well as functions for import and export.
+In addition, there are other support scripts that are required
+internally.
 
-\hypertarget{sensor-interface}{%
-\subsubsection{Sensor Interface}\label{sensor-interface}}
-
-Another collection of optional modules provided by the library is the
-connection of external hardware sensors. All compatible sensors that are
-compatible with the firmware developed in the
-\passthrough{\lstinline!Unified Sensor!}\ref{unified-sensor} chapter are
-supported here. The library provides the following sensor \gls{hal}
-modules for this purpose:
+The following modules are implemented in detail:
 
 \begin{itemize}
 \tightlist
 \item
-  \passthrough{\lstinline!MRPHal!} - Firmware protocol implementation
+  \passthrough{\lstinline!MRPReading!} - storage of measured values
 \item
-  \passthrough{\lstinline!MRPHalLocal!} - \gls{usb} sensor interface
+  \passthrough{\lstinline!MRPMeasurementConfig!} - storage of the
+  measurement parameters
 \item
-  \passthrough{\lstinline!MRPHalRemote!} - Remote sensor interface
+  \passthrough{\lstinline!MRPMagnetTypes!} - various physical constants
+  for basic magnet types
 \end{itemize}
 
-These provide functions to communicate with a connected hardware sensor
-and send commands to it. To generate these and convert the received
-measurement data into the appropriate format for the core modules, there
-is a suitable module for each sensor type:
+The \passthrough{\lstinline!MRPReading!} module performs a crucial role
+in streamlining the centralized management of measurement data. It
+serves as a storage provider for various measurements, offering
+functionalities that facilitate the creation and addition of data
+records. To customize and add meta-data, users have the flexibility to
+configure parameters through the dedicated
+\passthrough{\lstinline!MRPMeasurementConfig!} module into an
+\passthrough{\lstinline!MRPReading!} instance.
 
-\begin{itemize}
-\tightlist
-\item
-  \passthrough{\lstinline!MRPReadingSourceStatic!} - for 1D and 2D
-  sensor such as
-  \passthrough{\lstinline!1D: Single Sensor!}\ref{d-single-sensor}
-\item
-  \passthrough{\lstinline!MRPReadingSourceFullsphere!} - for 3D sensors
-  such as \passthrough{\lstinline!3D: Fullsphere!}\ref{d-fullsphere}
-\end{itemize}
+Within the realm of measurement data, a diverse range of data points can
+be seamlessly incorporated. The process is initiated by employing
+specialized functions designed for the creation and addition of data
+records. To configure parameters, ensuring a tailored approach to the
+entire measurement process, these parameters act as a crucial bridge
+between user preferences and the robust capabilities of the
+\passthrough{\lstinline!MRPReading!} module.
 
-The decision which of these modules to use is made automatically
-depending on the connected hardware. For this purpose, a static function
-\passthrough{\lstinline!createReadingSourceInstance!} is implemented in
-the base class \passthrough{\lstinline!MRPReadingSource!}, which
-automatically creates the appropriate instance based on the sensor
-capabilites.
+The system is also designed to be compatible with
+\passthrough{\lstinline!Extension Modules!}\ref{extension-modules},
+allowing the generation of measurement data through various modules.
+This extensibility enhances the versatility of the system, accommodating
+diverse measurement scenarios and expanding its utility across different
+domains.
 
-\hypertarget{visualisation}{%
-\subsubsection{Visualisation}\label{visualisation}}
+To enhance the accessibility and interpretability of the recorded data,
+a dedicated module, MRPMagnetTypes, comes into play. This module is
+specifically designed for the storage of physical parameters pertaining
+to the magnets targeted for measurement. By centralizing this
+information, users can streamline the subsequent phases of evaluation
+and analysis, simplifying the overall process and ensuring a more
+efficient and insightful exploration of the collected data.
 
-\hypertarget{analysis}{%
-\subsubsection{Analysis}\label{analysis}}
+At the end of processing, the collected data is typically exported;
+various functions are provided for this purpose. These are described as
+the following.
 
 \hypertarget{storage-and-datamanagement}{%
-\section{Storage and Datamanagement}\label{storage-and-datamanagement}}
+\subsubsection{Storage and
+Datamanagement}\label{storage-and-datamanagement}}
 
 An important aspect is data import and export. On the one hand, this
 allows the library to reuse and archive the measurements. On the other
@@ -978,7 +982,7 @@ then be processed directly or written to the file system as a file.
 \begin{lstlisting}[caption={JSON export structure of an MRPReading based measurement}, label=lst:json_export_format_example]
 {
   "time_start": "Wed Sep 20 08:50:13 2023",
-  "time_end": "Wed Sep 20 08:50:13 2023",
+  "time_end": "Wed Sep 20 08:54:13 2023",
   "additional_data": {
       "sensor_device_path": "/dev/cu.usbmodem3867315334391",
       "sensor_name": "Unified Sensor Single Sensor",
@@ -1045,6 +1049,85 @@ corresponding \passthrough{\lstinline!MRPReading!} class functions:
 Currently, data re-import of an exported measurement is only supported
 via the \gls{json} format, as an export using the other options (Numpy,
 Matlab)loses data during the export procedure.
+
+\hypertarget{extension-modules}{%
+\subsection{Extension Modules}\label{extension-modules}}
+
+\hypertarget{sensor-interface}{%
+\subsubsection{Sensor Interface}\label{sensor-interface}}
+
+Another collection of optional modules provided by the library is the
+connection of external hardware sensors. All compatible sensors that are
+compatible with the firmware developed in the
+\passthrough{\lstinline!Unified Sensor!}\ref{unified-sensor} chapter are
+supported here. The library provides the following sensor \gls{hal}
+modules for this purpose:
+
+\begin{itemize}
+\tightlist
+\item
+  \passthrough{\lstinline!MRPHal!} - Firmware protocol implementation
+\item
+  \passthrough{\lstinline!MRPHalLocal!} - \gls{usb} sensor interface
+\item
+  \passthrough{\lstinline!MRPHalRemote!} - Remote sensor interface
+\end{itemize}
+
+These provide functions to communicate with a connected hardware sensor
+and send commands to it. To generate these and convert the received
+measurement data into the appropriate format for the core modules, there
+is a suitable module for each sensor type:
+
+\begin{itemize}
+\tightlist
+\item
+  \passthrough{\lstinline!MRPReadingSourceStatic!} - for 1D and 2D
+  sensor such as
+  \passthrough{\lstinline!1D: Single Sensor!}\ref{d-single-sensor}
+\item
+  \passthrough{\lstinline!MRPReadingSourceFullsphere!} - for 3D sensors
+  such as \passthrough{\lstinline!3D: Fullsphere!}\ref{d-fullsphere}
+\end{itemize}
+
+The decision which of these modules to use is made automatically
+depending on the connected hardware. For this purpose, a static function
+\passthrough{\lstinline!createReadingSourceInstance!} is implemented in
+the base class \passthrough{\lstinline!MRPReadingSource!}, which
+automatically creates the appropriate instance based on the sensor
+capabilites.
+
+\hypertarget{visualisation}{%
+\subsubsection{Visualisation}\label{visualisation}}
+
+In order to give the user the possibility to display the recorded data
+visually, two modules were created, which can graphically prepare
+\passthrough{\lstinline!MRPReading!} instances:
+
+\begin{itemize}
+\tightlist
+\item
+  \passthrough{\lstinline!MRPVisualization!} - different table, graph
+  based plots
+\item
+  \passthrough{\lstinline!MRPPolarVisualization!} - fullsphere map plots
+\end{itemize}
+
+On the one hand, it is possible with the
+\passthrough{\lstinline!MRPVisualization!} module to display measurement
+data as a table or streamplot, lineplot. This makes it possible, for
+example, to visually identify outliers or trends in the measurement
+data. These can also be saved as an image file. The module is compatible
+with all measurement data.
+
+In contrast to the \passthrough{\lstinline!MRPPolarVisualization!}
+module, this provides functions to create 2D map plots in the polar
+coordinate system. This requires measurement data with additionally set
+spatial coordinates. These can be generated automatically with the
+\passthrough{\lstinline!3D: Fullsphere!}\ref{d-fullsphere} sensor, or
+the user must provide the spatial information from another source.
+
+\hypertarget{analysis}{%
+\subsubsection{Analysis}\label{analysis}}
 
 \hypertarget{multi-sensor-setup}{%
 \section{Multi Sensor Setup}\label{multi-sensor-setup}}
