--- a/documentation/thesis/thesis_document.tex
+++ b/documentation/thesis/thesis_document.tex
@@ -1120,7 +1120,7 @@ data. These can also be saved as an image file. The module is compatible
 with all measurement data.
 
 In contrast to the \passthrough{\lstinline!MRPPolarVisualization!}
-module, this provides functions to create 2D map plots in the polar
+module, this provides functions to create 2D map plots a polar
 coordinate system. This requires measurement data with additionally set
 spatial coordinates. These can be generated automatically with the
 \passthrough{\lstinline!3D: Fullsphere!}\ref{d-fullsphere} sensor, or
