--- a/documentation/thesis/thesis_document.tex
+++ b/documentation/thesis/thesis_document.tex
@@ -25,7 +25,21 @@ Magnets}\label{charakterisation-of-permanent-magnets}}
 \hypertarget{aim-of-this-thesis}{%
 \section{Aim of this Thesis}\label{aim-of-this-thesis}}
 
-\ref{usecases}
+The present work aims to provide an efficient and comprehensive solution
+for the design of low-field MRI devices by developing and implementing a
+software and hardware framework.
+
+The scope of the software library is to lay the foundation for the
+systematic characterization of magnets based on permanent magnets. The
+library will enable data acquisition, storage and analysis of magnetic
+properties, with customization possible at each step of the process. The
+work aims to facilitate magnetic field characterization and improve the
+exchange of data between different user groups. Complete documentation,
+tutorials and tests will enable users to use the framework efficiently
+and adapt it to their specific requirements. The application of the
+developed framework for the characterization of different magnets and
+the integration of magnetic field sensors serve as practical
+applications and validation of the developed solution.
 
 \hypertarget{structure}{%
 \section{Structure}\label{structure}}
@@ -376,7 +390,7 @@ instances are created and these can later be used to read out
 measurement results.
 
 The next initialisation system is dedicated for multi-sensor
-synchronisation \ref{sensor-syncronsisation-interface}. The last step in
+synchronisation \ref{sensor-syncronisation-interface}. The last step in
 the setup is to configure communication with the host or connected
 \gls{pc}. All implemented microcontroller platforms used (Raspberry Pi
 Pico, STM32F4) have a \gls{usb} slave port. The used usb descriptor is a
@@ -399,7 +413,7 @@ read out by command and the result of the measurement is sent to the
 host. Each sensor measurement result is transmitted from the buffer to
 the host together with a time stamp and a sequential number. This
 ensures that in a multi-sensor setup with several sensors. The
-measurements are synchronized \ref{sensor-syncronsisation-interface} in
+measurements are synchronized \ref{sensor-syncronisation-interface} in
 time and are not out of sequence or drift.
 
 \hypertarget{communication-interface}{%
@@ -449,9 +463,9 @@ mode, which is initiated using the \passthrough{\lstinline!sbm!}
 command. The same commands are available as for \gls{cli}-based
 communication.
 
-\hypertarget{sensor-syncronsisation-interface}{%
-\subsection{Sensor syncronsisation
-interface}\label{sensor-syncronsisation-interface}}
+\hypertarget{sensor-syncronisation-interface}{%
+\subsection{Sensor Syncronisation
+Interface}\label{sensor-syncronisation-interface}}
 
 \begin{figure}
 \centering
@@ -942,16 +956,17 @@ diverse measurement scenarios and expanding its utility across different
 domains.
 
 To enhance the accessibility and interpretability of the recorded data,
-a dedicated module, MRPMagnetTypes, comes into play. This module is
-specifically designed for the storage of physical parameters pertaining
-to the magnets targeted for measurement. By centralizing this
-information, users can streamline the subsequent phases of evaluation
-and analysis, simplifying the overall process and ensuring a more
-efficient and insightful exploration of the collected data.
+a dedicated module, \passthrough{\lstinline!MRPMagnetTypes!}, comes into
+play. This module is specifically designed for the storage of physical
+parameters pertaining to the magnets targeted for measurement. By
+centralizing this information, users can streamline the subsequent
+phases of evaluation and analysis, simplifying the overall process and
+ensuring a more efficient and insightful exploration of the collected
+data.
 
-At the end of processing, the collected data is typically exported;
-various functions are provided for this purpose. These are described as
-the following.
+At the end of processing, the collected and modified data are typically
+exported; various functions are provided for this purpose. This process
+is described in the following subchapter.
 
 \hypertarget{storage-and-datamanagement}{%
 \subsubsection{Storage and
@@ -1053,6 +1068,10 @@ Matlab)loses data during the export procedure.
 \hypertarget{extension-modules}{%
 \subsection{Extension Modules}\label{extension-modules}}
 
+The extention modules build on the core modules and offer the user
+additional basic functionalities. These include functions for data
+acquisition, visualization and analysis.
+
 \hypertarget{sensor-interface}{%
 \subsubsection{Sensor Interface}\label{sensor-interface}}
 
@@ -1082,7 +1101,7 @@ is a suitable module for each sensor type:
 \tightlist
 \item
   \passthrough{\lstinline!MRPReadingSourceStatic!} - for 1D and 2D
-  sensor such as
+  sensors such as
   \passthrough{\lstinline!1D: Single Sensor!}\ref{d-single-sensor}
 \item
   \passthrough{\lstinline!MRPReadingSourceFullsphere!} - for 3D sensors
@@ -1106,7 +1125,7 @@ visually, two modules were created, which can graphically prepare
 \begin{itemize}
 \tightlist
 \item
-  \passthrough{\lstinline!MRPVisualization!} - different table, graph
+  \passthrough{\lstinline!MRPVisualization!} - different table and graph
   based plots
 \item
   \passthrough{\lstinline!MRPPolarVisualization!} - fullsphere map plots
@@ -1129,6 +1148,35 @@ the user must provide the spatial information from another source.
 \hypertarget{analysis}{%
 \subsubsection{Analysis}\label{analysis}}
 
+Data analysis offers the user the greatest flexibility to implement
+their own modules. For this reason \passthrough{\lstinline!MRPAnalysis!}
+contains functions for calculating the following data analyses, which
+are compatible with class instances of
+\passthrough{\lstinline!MRPReading!}:
+
+\begin{itemize}
+\tightlist
+\item
+  \passthrough{\lstinline!std\_deviation!} - standard deviation
+\item
+  \passthrough{\lstinline!mean!} - mean value
+\item
+  \passthrough{\lstinline!variance!} - variance
+\item
+  \passthrough{\lstinline!center\_of\_gravity!} - center of gravity
+\item
+  \passthrough{\lstinline!binning!} - distribution of a sample by means
+  of a histogram
+\item
+  \passthrough{\lstinline!k-nearest!} - k-nearest neighbors
+\end{itemize}
+
+In addition, the export function
+\passthrough{\lstinline!.to\_numpy\_matrix!} enables further processing
+of the data in the
+\passthrough{\lstinline!Numpy!}\cite{harris2020array} framework, in
+which many other standard analysis functions are implemented.
+
 \hypertarget{multi-sensor-setup}{%
 \section{Multi Sensor Setup}\label{multi-sensor-setup}}
 
@@ -1137,10 +1185,10 @@ use sensors that are directly connected to the host \gls{pc}. It has the
 disadvantage that there must always be a physical connection. This can
 make it difficult to install multiple sensors in measurement setups
 where space or cable routing options are limited. So multibe sensor can
-be connected to a \passthrough{\lstinline!remote!} \gls{pc} which is
-available on the network. This can be a \gls{sbc} (e.g.~a Raspberry Pi).
-The small footprint and low power consumption make it a good choice. It
-can also be used in a temperature chamber.
+be connected to any \gls{pc} which is available on the network. This can
+be a \gls{sbc} (e.g.~a Raspberry Pi). The small footprint and low power
+consumption make it a good choice. It can also be used in a temperature
+chamber.
 
 The \passthrough{\lstinline!MRPProxy!}\ref{MRPlib_Proxy_Module.png}
 module has been developed to allow forwarding and interaction with
@@ -1259,7 +1307,7 @@ Individual sensor setups do not require any additional synchronisation
 information, as this is communicated via the \gls{usb} interface. If
 several sensors are connected locally, they can be connected to each
 other via their sync input using short cables. One sensor acts as the
-central clock as described in \ref{sensor-syncronsisationiinterface}.
+central clock as described in \ref{sensor-syncronisation-interface}.
 this no longer works for long distances and the syncronisation must be
 made via a shared network connection.
 
